--- a/app/src/main/res/layout/simple_note_item.xml
+++ b/app/src/main/res/layout/simple_note_item.xml
@@ -15,7 +15,7 @@
         android:layout_marginHorizontal="16dp">
 
         <TextView
-            android:id="@+id/title"
+            android:id="@+id/title_text_view"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:fontFamily="@font/poppins_medium"
