--- a/app/src/main/res/layout/activity_check_note_details.xml
+++ b/app/src/main/res/layout/activity_check_note_details.xml
@@ -17,21 +17,23 @@
         <ImageView
             android:layout_width="21dp"
             android:layout_height="21dp"
-            android:layout_weight="2"
             android:src="@drawable/backspace_icon"/>
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
+            android:hint="Input notice"
             android:layout_marginStart="16dp"
-            android:layout_weight="12">
-            <TextView
-                android:id="@+id/title_text_view"
+            android:layout_weight="1">
+            <EditText
+                android:id="@+id/title_edit_view"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:singleLine="true"
+                android:backgroundTint="@android:color/transparent"
                 android:textSize="12sp"
                 android:textColor="@color/black"
+                android:hint="Input Title"
                 android:layout_marginTop="24dp"
                 android:fontFamily="@font/poppins_medium"
                 android:text="Today's Workflow"/>
@@ -39,16 +41,21 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="32dp">
+
                 <CheckBox
                     android:id="@+id/first_check_box"
-                    android:layout_width="25dp"
                     style="@style/CheckBoxStyle"
-                    android:layout_height="20dp"/>
-                <TextView
-                    android:id="@+id/first_check_box_title"
+                    android:layout_gravity="center"
+                    android:layout_width="25dp"
+                    android:layout_height="20dp" />
+
+                <EditText
+                    android:id="@+id/first_check_box_edit"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:backgroundTint="@android:color/transparent"
                     style="@style/CheckNoteTextViewStyle"
+                    android:hint="Input notice"
                     tools:text="@tools:sample/lorem"/>
             </LinearLayout>
             <LinearLayout
@@ -59,12 +66,15 @@
                     android:id="@+id/second_check_box"
                     android:layout_width="25dp"
                     style="@style/CheckBoxStyle"
+                    android:layout_gravity="center"
                     android:layout_height="20dp"/>
-                <TextView
-                    android:id="@+id/second_check_box_title"
+                <EditText
+                    android:id="@+id/second_check_box_edit"
                     android:layout_width="wrap_content"
+                    android:backgroundTint="@android:color/transparent"
                     android:layout_height="wrap_content"
                     style="@style/CheckNoteTextViewStyle"
+                    android:hint="Input notice"
                     tools:text="@tools:sample/lorem"/>
             </LinearLayout>
             <LinearLayout
@@ -75,11 +85,14 @@
                     android:id="@+id/third_check_box"
                     android:layout_width="25dp"
                     style="@style/CheckBoxStyle"
+                    android:layout_gravity="center"
                     android:layout_height="20dp"/>
-                <TextView
-                    android:id="@+id/third_check_box_title"
+                <EditText
+                    android:id="@+id/third_check_box_edit"
                     android:layout_width="wrap_content"
+                    android:hint="Input notice"
                     android:layout_height="wrap_content"
+                    android:backgroundTint="@android:color/transparent"
                     style="@style/CheckNoteTextViewStyle"
                     tools:text="@tools:sample/lorem"/>
             </LinearLayout>
@@ -88,14 +101,17 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="24dp">
                 <CheckBox
-                    android:id="@+id/four_check_box"
+                    android:id="@+id/fourth_check_box"
                     android:layout_width="25dp"
+                    android:layout_gravity="center"
                     style="@style/CheckBoxStyle"
                     android:layout_height="20dp"/>
-                <TextView
-                    android:id="@+id/fourth_check_box_title"
+                <EditText
+                    android:backgroundTint="@android:color/transparent"
+                    android:id="@+id/fourth_check_box_edit"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:hint="Input notice"
                     style="@style/CheckNoteTextViewStyle"
                     tools:text="@tools:sample/lorem"/>
             </LinearLayout>
@@ -106,11 +122,14 @@
                 <CheckBox
                     android:id="@+id/fifth_check_box"
                     android:layout_width="25dp"
+                    android:layout_gravity="center"
                     style="@style/CheckBoxStyle"
                     android:layout_height="20dp"/>
-                <TextView
-                    android:id="@+id/fifth_check_box_title"
+                <EditText
+                    android:backgroundTint="@android:color/transparent"
+                    android:id="@+id/fifth_check_box_edit"
                     android:layout_width="wrap_content"
+                    android:hint="Input notice"
                     android:layout_height="wrap_content"
                     style="@style/CheckNoteTextViewStyle"
                     tools:text="@tools:sample/lorem"/>
@@ -125,7 +144,7 @@
                     style="@style/CheckBoxStyle"
                     android:layout_height="20dp"/>
                 <TextView
-                    android:id="@+id/sixth_check_box_title"
+                    android:id="@+id/sixth_check_box_edit"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     style="@style/CheckNoteTextViewStyle"
@@ -146,12 +165,13 @@
                 android:text="Last edited: 17.12.2021 18:06"/>
         </LinearLayout>
         <Button
+            android:id="@+id/check_note_button_save_changes"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginHorizontal="16dp"
+            android:layout_marginTop="100dp"
             android:layout_weight="1"
             android:paddingVertical="12dp"
-            android:layout_marginTop="250dp"
-            android:layout_marginHorizontal="16dp"
-            android:text="Save Changes"/>
+            android:text="Save Changes" />
     </LinearLayout>
 </LinearLayout>
