--- a/app/src/main/res/layout/activity_check_note_details.xml
+++ b/app/src/main/res/layout/activity_check_note_details.xml
@@ -15,6 +15,7 @@
         android:orientation="vertical"
         android:weightSum="15">
         <ImageView
+            android:id="@+id/image_backspace"
             android:layout_width="21dp"
             android:layout_height="21dp"
             android:src="@drawable/backspace_icon"/>
